fixing quote space and align left like mock

--- a/single-page.css
+++ b/single-page.css
@@ -29,9 +29,9 @@
 .quoteContainer {
   border: 3px solid #a8a8a8;
   border-radius: 5px 30px;
-  padding: 10px;
+  padding: 15px;
   position: relative;
-
+  text-align:left;
   margin: 20px;
 }
 
@@ -80,7 +80,7 @@ h5 {
 .quoteContainer:before {
   content: '❝';
   position: absolute;
-  top: -24px;
+  top: -30px;
   left: 5px;
   font-size: 70px;
   line-height: 1;
@@ -94,7 +94,7 @@ h5 {
   font-size: 70px;
   line-height: 1;
   height: 0px;
-  bottom: 20px;
+  bottom: 13px;
   right: 5px;
 }
 .nav-wrapper #nav{
